
+++
*** New function 'pixel-fill-region'.
This fills the region to be no wider than a specified pixel width.

** Info

---
*** New command 'Info-goto-node-web' and key binding 'G'.
This will take you to the gnu.org web server's version of the current
info node.  This command only works for the Emacs and Emacs Lisp manuals.

** vc

---
*** 'C-x v v' on an unregistered file will now use the most specific backend.
Previously, if you had an SVN-covered "~/" directory, and a Git-covered
directory in "~/foo/bar", using 'C-x v v' on a new, unregistered file
"~/foo/bar/zot" would register it in the SVN repository in "~/" instead of
in the Git repository in "~/foo/bar".  This makes this command
consistent with 'vc-responsible-backend'.

** Message

---
*** New user option 'mml-attach-file-at-the-end'.
If non-nil, 'C-c C-a' will put attached files at the end of the message.

---
*** Message Mode now supports image yanking.

** HTML Mode

---
*** HTML Mode now supports "text/html" and "image/*" yanking.

** Texinfo Mode

---
*** 'texinfo-mode' now has a specialised 'narrow-to-defun' definition.
It narrows to the current node.

** eww/shr

+++
*** New user option 'shr-use-xwidgets-for-media'.
If non-nil (and Emacs has been built with support for xwidgets),
display <video> elements with an xwidget.  Note that this is
experimental, and is known to crash Emacs on some systems, and just
doesn't work on other systems.  Also see etc/PROBLEMS.

+++
*** New user option 'eww-url-transformers'.
These are used to alter an URL before using it.  By default it removes
the common "utm_" trackers from URLs.

** Gnus

---
*** Gnus now uses a variable-pitch font in the headers by default.
To get the monospace font back, you can put something like the
following in your .gnus file:

    (set-face-attribute 'gnus-header nil :inherit 'unspecified)

---
*** The default value of 'gnus-treat-fold-headers' is now 'head'.

---
*** New face 'gnus-header'.